// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Player Empty 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-1c9ybkv"
  />
   
  <div
    class="flex items-center svelte-1c9ybkv"
  >
    <span
      class="current svelte-1c9ybkv"
    />
     
    <div
      class="player svelte-1c9ybkv"
    >
      <span
        class="controls svelte-1c9ybkv"
      >
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly large"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-1c9ybkv"
      >
        <span
          class="svelte-1c9ybkv"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-3pkjx0"
        >
          <input
            class="w-full svelte-3pkjx0"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-3pkjx0"
          >
            <span
              class="progress svelte-3pkjx0"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-1c9ybkv"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-1c9ybkv"
    >
      <div
        class="volume svelte-1c9ybkv"
      >
        <span
          class="volume-slider svelte-1c9ybkv"
        >
          <div
            class="wrapper undefined svelte-3pkjx0"
          >
            <input
              class=" svelte-3pkjx0"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-3pkjx0"
            >
              <span
                class="progress svelte-3pkjx0"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            volume_up
          </i>
           
        </button>
      </div>
       
      <button
        class="svelte-j6xhgj iconOnly large"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Player With Track List 1`] = `
<section
  class="storybook-snapshot-container"
>
  <audio
    autoplay=""
    class="svelte-1c9ybkv"
    src="./no-duration.mp3"
  />
   
  <div
    class="flex items-center svelte-1c9ybkv"
  >
    <span
      class="current svelte-1c9ybkv"
    >
      <div
        class="undefined root svelte-11ci2py"
      >
        <a
          class="flex-none"
          href="#/album/0"
        >
          <img
            alt="./# Films/cover.jpg"
            class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
            loading="lazy"
            src="./%23 Films/cover.jpg#nonce=0.1"
          />
           
          
        </a>
         
        <div
          class="track svelte-11ci2py"
        >
          <span
            class="title svelte-11ci2py"
          >
            file 1
          </span>
           
          <a
            class="artist underlined svelte-11ci2py"
            href="#/artist/4090049524"
          >
            Someone
          </a>
        </div>
         
      </div>
    </span>
     
    <div
      class="player svelte-1c9ybkv"
    >
      <span
        class="controls svelte-1c9ybkv"
      >
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_previous
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly large"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            play_arrow
          </i>
           
        </button>
         
        <button
          class="mx-1 svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            skip_next
          </i>
           
        </button>
      </span>
       
      <span
        class="controls time svelte-1c9ybkv"
      >
        <span
          class="svelte-1c9ybkv"
        >
          0:00
        </span>
         
        <div
          class="wrapper w-full svelte-3pkjx0"
        >
          <input
            class="w-full svelte-3pkjx0"
            max="0"
            min="0"
            type="range"
          />
           
          <div
            class="sliderTrack svelte-3pkjx0"
          >
            <span
              class="progress svelte-3pkjx0"
              style="right:100%"
            />
          </div>
        </div>
         
        <span
          class="svelte-1c9ybkv"
        >
          0:00
        </span>
      </span>
    </div>
     
    <span
      class="playlist svelte-1c9ybkv"
    >
      <div
        class="volume svelte-1c9ybkv"
      >
        <span
          class="volume-slider svelte-1c9ybkv"
        >
          <div
            class="wrapper undefined svelte-3pkjx0"
          >
            <input
              class=" svelte-3pkjx0"
              max="100"
              min="0"
              type="range"
            />
             
            <div
              class="sliderTrack svelte-3pkjx0"
            >
              <span
                class="progress svelte-3pkjx0"
                style="right:0%"
              />
            </div>
          </div>
        </span>
         
        <button
          class="svelte-j6xhgj iconOnly noBorder"
        >
          <i
            class="material-icons svelte-j6xhgj"
          >
            volume_up
          </i>
           
        </button>
      </div>
       
      <button
        class="svelte-j6xhgj iconOnly large"
      >
        <i
          class="material-icons svelte-j6xhgj"
        >
          queue_music
        </i>
         
      </button>
    </span>
  </div>
</section>
`;
